# BagiEngine

./: !meta_generator.cmd  !meta_generator.command  !start.cmd  !start.command  .clang-format  .clang-format-ignore  .clang-tidy  .cursorignore  .cursorrules  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  BagiEngine.code-workspace  CLAUDE.md  CmakeLists.txt  WORKSPACE_README.md  create_env.ps1  imgui.ini  requirements.txt  start.cmd  start.command  start.ps1  start.sh
src/Modules/BECore/: CMakeLists.txt  pch.h
src/Modules/BECore/Application/: ApplicationFabric.cpp  ApplicationFabric.h  ApplicationMainAccess.h  ApplicationSystemType.h  IApplicationFabric.cpp  IApplicationFabric.h
src/Modules/BECore/Assert/: AssertEvent.h  AssertHandlers.cpp  AssertHandlers.h  AssertMacros.h  CRTDebugHook.cpp  CRTDebugHook.h  IAssertHandler.cpp  IAssertHandler.h  PlatformDebug.h  StackTrace.cpp  StackTrace.h
src/Modules/BECore/Config/: ConfigFactory.h  ConfigManager.cpp  ConfigManager.h  XmlConfig.cpp  XmlConfig.h  XmlConfigImpl.cpp  XmlConfigImpl.h  XmlDocument.cpp  XmlDocument.h  XmlNode.h  XmlNodeImpl.h
src/Modules/BECore/FileSystem/: FileSystem.cpp  FileSystem.h
src/Modules/BECore/Format/: Format.cpp  Format.h
src/Modules/BECore/GameManager/: CoreManager.cpp  CoreManager.h
src/Modules/BECore/Input/: ActionsLibrary.h
src/Modules/BECore/Logger/: ConsoleSink.cpp  ConsoleSink.h  FileSink.cpp  FileSink.h  ILogSink.cpp  ILogSink.h  LogEvent.cpp  LogEvent.h  LogLevel.h  LogRingBuffer.h  LogSinkType.h  LogSinks.cpp  LogSinks.h  Logger.cpp  Logger.h  LoggerManager.cpp  LoggerManager.h  OutputSink.cpp  OutputSink.h
src/Modules/BECore/MainWindow/: IMainWindow.h  MainWindowAccessor.h  MainWindowManager.h
src/Modules/BECore/Math/: Color.cpp  Color.h  NumberUtils.h  Rect.h
src/Modules/BECore/PoolString/: PoolString.cpp  PoolString.h  PoolStringChain.cpp  PoolStringChain.h  PoolStringMap.h  StaticPoolString.h
src/Modules/BECore/RefCounted/: Delete.h  IntrusivePtr.h  New.h  RefCounted.h
src/Modules/BECore/Reflection/: AbstractFactory.h  BinaryArchive.cpp  BinaryArchive.h  ClassMeta.h  DataAccessor.h  FactoryTraits.h  FieldSerializer.h  IArchive.h  IDeserializer.h  IPropertyVisitor.h  ISerializer.h  MethodInfo.h  PropertyVisitorDispatch.h  ReflectionMarkers.h  SaveSystem.h  SerializationTraits.h  TypeTraits.h  XmlArchive.cpp  XmlArchive.h  XmlDeserializer.cpp  XmlDeserializer.h  XmlSerializer.cpp  XmlSerializer.h
src/Modules/BECore/Renderer/: IRenderTarget.h  IRenderer.cpp  IRenderer.h  ITexture.cpp  ITexture.h  RendererManager.h
src/Modules/BECore/Resource/: IResource.cpp  IResource.h  IResourceLoader.cpp  IResourceLoader.h  ResourceCache.cpp  ResourceCache.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  SerializedResource.h  TextureLibrary.cpp  TextureLibrary.h  XmlResource.cpp  XmlResource.h  XmlResourceLoader.cpp  XmlResourceLoader.h
src/Modules/BECore/Scene/: IComponent.cpp  IComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h
src/Modules/BECore/Scene/Components/: ChangeToRandomColorDebugComponent.cpp  ChangeToRandomColorDebugComponent.h  ClickableComponent.cpp  ClickableComponent.h  QuadRendererComponent.cpp  QuadRendererComponent.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h  TransformComponent.cpp  TransformComponent.h
src/Modules/BECore/Tests/: EnumUtilsTest.cpp  EnumUtilsTest.h  EventSubscriptionTest.cpp  EventSubscriptionTest.h  FormatTest.cpp  FormatTest.h  ITest.cpp  ITest.h  PoolStringTest.cpp  PoolStringTest.h  ReflectionEventTest.cpp  ReflectionEventTest.h  ReflectionTest.cpp  ReflectionTest.h  ResourceManagerTest.cpp  ResourceManagerTest.h  TaskSystemTest.cpp  TaskSystemTest.h  TestManager.cpp  TestManager.h
src/Modules/BECore/Utils/: EASTLOperators.cpp  EnumUtils.h  Overload.h  PassKey.h  ScopeGuard.h  Singleton.h  String.cpp  String.h
src/Modules/BECore/Widgets/: IWidget.cpp  IWidget.h  WidgetManager.cpp  WidgetManager.h
src/Modules/Chess/: CMakeLists.txt
src/Modules/Chess/src/Chess/: ChessGame.cpp  ChessGame.h
src/Modules/EABase/: CMakeLists.txt  README.md
src/Modules/EnTT/: CMakeLists.txt  README.md
src/Modules/Events/: CMakeLists.txt
src/Modules/Events/src/: EventBase.h  EventsProviderManager.cpp  EventsProviderManager.h  EventsQueueRegistry.h  IEventsProvider.h  RenderEvents.h  pch.h
src/Modules/Events/src/Events/: ApplicationEvents.h  EventBase.h  EventsProviderManager.cpp  EventsProviderManager.h  EventsQueueRegistry.h  IEventsProvider.h  InputEvents.h  RenderEvents.h  SceneEvents.h  SubscriptionHolder.h
src/Modules/Games/: CMakeLists.txt
src/Modules/Games/src/Games/: GameManager.cpp  GameManager.h  IGame.cpp  IGame.h
src/Modules/Match3/: CMakeLists.txt
src/Modules/Match3/src/Match3/: Match3Game.cpp  Match3Game.h
src/Modules/Math/: CMakeLists.txt
src/Modules/Math/src/: Color.cpp  pch.h
src/Modules/Math/src/Math/: Color.cpp  Color.h  NumberUtils.h
src/Modules/SDL/: CMakeLists.txt
src/Modules/SDL/src/: pch.h
src/Modules/SDL/src/CoreSDL/: ApplicationSDLFabric.cpp  ApplicationSDLFabric.h  SDL3ApplicationFabric.cpp  SDL3ApplicationFabric.h  SDLEvents.h  SDLEventsProvider.cpp  SDLEventsProvider.h  SDLMainWindow.cpp  SDLMainWindow.h  SDLRendererBackend.cpp  SDLRendererBackend.h  SDLTexture.cpp  SDLTexture.h  SDLTextureLoader.cpp  SDLTextureLoader.h  SDLUtils.cpp  SDLUtils.h  SDLWindowConfig.h
src/Modules/TaskSystem/: CMakeLists.txt
src/Modules/TaskSystem/src/TaskSystem/: Awaitables.cpp  Awaitables.h  CancellationToken.h  EventAwaiter.h  Task.h  TaskGroup.h  TaskHandle.h  TaskManager.cpp  TaskManager.h  TaskPriority.h  TaskQueue.h  TaskScheduler.cpp  TaskScheduler.h  TaskStatistics.h  ThreadPool.cpp  ThreadPool.h
src/Modules/Vulkan/: CMakeLists.txt
src/Modules/Vulkan/cmake/: SpvToHeader.cmake
src/Modules/Vulkan/shaders/: rect.frag.glsl  rect.vert.glsl  texture.frag.glsl  texture.vert.glsl
src/Modules/fmt/: CMakeLists.txt
src/Modules/imgui/: CMakeLists.txt  README.md
src/Modules/pugixml/: CMakeLists.txt  README.md
(+259 files in other folders)
